# field_task_backend

./: Dockerfile  pyproject.toml
src/field_task/: main.py
src/field_task/auth/models/: user_model.py
src/field_task/auth/routers/: auth_routers.py  user_routes.py
src/field_task/auth/schemas/: user_schemas.py
src/field_task/complete_task/models/: complete_task_model.py
src/field_task/complete_task/routers/: complete_task_routes.py
src/field_task/complete_task/schemas/: complete_task_schemas.py
src/field_task/database/: database.py
src/field_task/task/models/: task_model.py
src/field_task/task/routers/: task_routes.py
src/field_task/task/schemas/: task_schemas.py
src/field_task/utils/: email_config.py
